--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,62 +35,9 @@ jobs:
           fetch-depth: 0
       - name: "Install .NET Core SDK"
         uses: actions/setup-dotnet@v2.1.0
-      - name: "Dotnet Tool Restore"
-        run: dotnet tool restore
-        shell: pwsh
-      - name: "Dotnet Cake Build"
-        run: dotnet cake --target=Build
-        shell: pwsh
-      - name: "Dotnet Cake Test"
-        run: dotnet cake --target=Test
-        shell: pwsh
-      - name: "Dotnet Cake Pack"
-        run: dotnet cake --target=Pack
-        shell: pwsh
-      - name: "Publish Artefacts"
-        uses: actions/upload-artifact@v3.1.0
         with:
-          name: ${{matrix.os}}
-          path: "./Artefacts"
-
-  push-github-packages:
-    name: "Push GitHub Packages"
-    needs: build
-    if: github.ref == 'refs/heads/main' || github.event_name == 'release'
-    environment:
-      name: "GitHub Packages"
-      url: https://github.com/JeevanJames/JvnGitHubProject/packages
-    permissions:
-      packages: write
-    runs-on: windows-latest
-    steps:
-      - name: "Download Artefact"
-        uses: actions/download-artifact@v3.0.0
-        with:
-          name: "windows-latest"
-      - name: "Dotnet NuGet Add Source"
-        run: dotnet nuget add source https://nuget.pkg.github.com/JeevanJames/index.json --name GitHub --username JeevanJames --password ${{secrets.GITHUB_TOKEN}}
-        shell: pwsh
-      - name: "Dotnet NuGet Push"
-        run: dotnet nuget push .\*.nupkg --api-key ${{ github.token }} --source GitHub --skip-duplicate
-        shell: pwsh
-
-  push-nuget:
-    name: "Push NuGet Packages"
-    needs: build
-    if: github.event_name == 'release'
-    environment:
-      name: "NuGet"
-      url: https://www.nuget.org/packages/Package
-    runs-on: windows-latest
-    steps:
-      - name: "Download Artefact"
-        uses: actions/download-artifact@v3.0.0
-        with:
-          name: "windows-latest"
-      - name: "Dotnet NuGet Push"
-        run: |
-          Get-ChildItem .\ -Filter *.nupkg |
-          Where-Object { !$_.Name.Contains('preview') } |
-          ForEach-Object { dotnet nuget push $_ --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{secrets.NUGET_API_KEY}} }
-        shell: pwsh
+            dotnet-version: 7
+      - name: "Build"
+        run: dotnet build -c Release
+      - name: "Test"
+        run: dotnet test -c Release
