--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: "Install .NET Core SDK"
         uses: actions/setup-dotnet@v2.1.0
         with:
-            dotnet-version: 7
+            dotnet-version: 7.x
       - name: "Build"
         run: dotnet build -c Release
       - name: "Test"
