--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,3 +41,12 @@ jobs:
         run: dotnet build -c Release
       - name: "Test"
         run: dotnet test -c Release
+
+  publish:
+    name: "Publish NuGet package"
+    runs-on: ubuntu-latest
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/') && github.ref =~ '^refs/tags/[0-9]+\.[0-9]+\.[0-9]+$'
+    steps:
+      - name: "Display details"
+        run: echo "Publishing ${{github.ref}} to NuGet.org"
