--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
     name: "Publish NuGet package"
     runs-on: ubuntu-latest
     needs: build
-    if: "startsWith(github.ref, 'refs/tags/') && github.ref =~ '^refs/tags/[0-9]+\\.[0-9]+\\.[0-9]+$'"
+    if: github.ref_type == 'tag' && github.ref =~ ^refs/tags/[0-9]+\.[0-9]+\.[0-9]+$
     steps:
       - name: "Display details"
         run: echo "Publishing ${{github.ref}} to NuGet.org"
