--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,10 @@ jobs:
         run: dotnet build -c Release
       - name: "Test"
         run: dotnet test -c Release
+      - name: "Log Details"
+        run: |
+          echo ${{github.ref}}
+          echo ${{github.ref_type}}
 
   publish:
     name: "Publish NuGet package"
