--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,11 @@ name: Build
 
 on:
   push:
+    tags:
+      - '[0-9]+.[0-9]+.[0-9]+'
     branches:
       - main
   pull_request:
-  release:
-    types:
-      - published
   workflow_dispatch:
 
 env:
