--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,4 +55,5 @@ jobs:
       - name: "Publish NuGet package"
         run: |
           dotnet pack ./src/Core/Core.csproj -c Release --include-symbols --include-source -p Version=${{github.ref_name}}
+          ls ./src/Core/bin/Release
           dotnet nuget push ./src/Core/bin/Release/Jeevan.PolicyEvaluation.${{github.ref_name}}.nupkg -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json
