--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,8 @@ jobs:
         run: dotnet test -c Release
       - name: "Log Details"
         run: |
+          pwd
+          tree
           echo ${{github.ref}}
           echo ${{github.ref_type}}
           echo ${{github.ref_name}}
