--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,8 +44,8 @@ jobs:
         shell: bash
         run: |
           pwd
+          dotnet pack src/Core/Core.csproj -c Release --include-symbols --include-source -p Version=1.4.5
           tree
-          dotnet pack ./src/Core/Core.csproj -c Release --include-symbols --include-source -p Version=${{github.ref_name}}
           ls src/Core/bin/Release
           echo ${{github.ref}}
           echo ${{github.ref_type}}
