--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -20,7 +20,7 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/JeevanJames/PolicyEvaluation</PackageProjectUrl>
         <!--<PackageIcon>Icon.png</PackageIcon>-->
-        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageReadmeFile>$(MSBuildThisFileDirectory)README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/JeevanJames/PolicyEvaluation.git</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <PackageTags>PolicyEvaluation</PackageTags>
