--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,10 +43,6 @@ jobs:
       - name: "Log Details"
         shell: bash
         run: |
-          pwd
-          dotnet pack src/Core/Core.csproj -c Release --include-symbols --include-source -p Version=1.4.5
-          tree
-          ls src/Core/bin/Release
           echo ${{github.ref}}
           echo ${{github.ref_type}}
           echo ${{github.ref_name}}
@@ -59,6 +55,5 @@ jobs:
     steps:
       - name: "Publish NuGet package"
         run: |
-          dotnet pack ./src/Core/Core.csproj -c Release --include-symbols --include-source -p Version=${{github.ref_name}}
-          ls ./src/Core/bin/Release
+          dotnet pack src/Core/Core.csproj -c Release --include-symbols --include-source -p Version=${{github.ref_name}}
           dotnet nuget push ./src/Core/bin/Release/Jeevan.PolicyEvaluation.${{github.ref_name}}.nupkg -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json
