--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, macOS-latest]
     steps:
       - name: "Checkout"
         uses: actions/checkout@v3.6.0
@@ -56,6 +56,7 @@ jobs:
       - name: "Publish NuGet package"
         run: |
           pwd
+          tree
           echo "Build package..."
           dotnet pack src/Core/Core.csproj -c Release --include-symbols --include-source -p Version=${{github.ref_name}}
           echo "Package created"
