--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,11 @@ jobs:
     needs: build
     if: github.ref_type == 'tag'
     steps:
+      - name: "Checkout"
+        uses: actions/checkout@v3.6.0
+        with:
+          lfs: true
+          fetch-depth: 0
       - name: "Publish NuGet package"
         run: |
           pwd
