--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,6 @@ name: Build
 
 on:
   push:
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
     branches:
       - main
   pull_request:
@@ -21,11 +19,8 @@ env:
 
 jobs:
   build:
-    name: Build-${{matrix.os}}
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+    name: Build
+    runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4.0.0
@@ -39,30 +34,4 @@ jobs:
       - name: "Build"
         run: dotnet build -c Release
       - name: "Test"
-        run: dotnet test -c Release
-      - name: "Log Details"
-        shell: bash
-        run: |
-          echo ${{github.ref}}
-          echo ${{github.ref_type}}
-          echo ${{github.ref_name}}
-
-  publish:
-    name: "Publish NuGet package"
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref_type == 'tag'
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v4.0.0
-        with:
-          lfs: true
-          fetch-depth: 0
-      - name: "Publish NuGet package"
-        run: |
-          echo "Build package..."
-          dotnet pack src/Core/Core.csproj -c Release --include-symbols --include-source -p Version=${{github.ref_name}}
-          echo "Package created"
-          echo "Publishing package..."
-          dotnet nuget push src/Core/bin/Release/Jeevan.PolicyEvaluation.${{github.ref_name}}.nupkg -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json
-          echo "Package published"
+        run: dotnet test -c Release --logger:"console;verbosity=normal"
