--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Build
 on:
   push:
     tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
+      - 'v[0-9]+.[0-9]+.[0-9]+'
   workflow_dispatch:
 
 env:
@@ -32,17 +32,11 @@ jobs:
       - name: "Install .NET Core SDK"
         uses: actions/setup-dotnet@v3.2.0
         with:
-            dotnet-version: 7.x
+          dotnet-version: 7.x
       - name: "Build"
         run: dotnet build -c Release
       - name: "Test"
-        run: dotnet test -c Release
-      - name: "Log Details"
-        shell: bash
-        run: |
-          echo ${{github.ref}}
-          echo ${{github.ref_type}}
-          echo ${{github.ref_name}}
+        run: dotnet test -c Release --logger:"console;verbosity=normal"
 
   publish:
     name: "Publish NuGet package"
@@ -56,9 +50,10 @@ jobs:
           fetch-depth: 0
       - name: "Publish NuGet package"
         run: |
-          echo "Build package..."
-          dotnet pack src/Core/Core.csproj -c Release --include-symbols --include-source -p Version=${{github.ref_name}}
+          $version = ${{github.ref_name}} -replace '^v' ''
+          echo "Build package with version $($version)..."
+          dotnet pack src/Core/Core.csproj -c Release --include-symbols --include-source -p Version=$version
           echo "Package created"
-          echo "Publishing package..."
-          dotnet nuget push src/Core/bin/Release/Jeevan.PolicyEvaluation.${{github.ref_name}}.nupkg -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json
+          echo "Publishing package with version $($version)..."
+          dotnet nuget push src/Core/bin/Release/Jeevan.PolicyEvaluation.$version.nupkg -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json
           echo "Package published"
