--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,7 @@
 <Project>
 
-    <Import Project="Project.props" />
-
     <PropertyGroup Label="Build">
+        <BaseNamespace>Jeevan.PolicyEvaluation</BaseNamespace>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -15,12 +14,13 @@
         <Authors>Jeevan James</Authors>
         <Company>Jeevan James</Company>
         <Product>Jeevan.PolicyEvaluation</Product>
-        <Copyright>Copyright (c) $(CopyrightYears) Jeevan James</Copyright>
+        <Copyright>Copyright (c) 2023-25 Jeevan James</Copyright>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/JeevanJames/PolicyEvaluation</PackageProjectUrl>
         <!--<PackageIcon>Icon.png</PackageIcon>-->
         <!--<PackageReadmeFile>$(MSBuildThisFileDirectory)README.md</PackageReadmeFile>-->
+        <RepositoryName>PolicyEvaluation</RepositoryName>
         <RepositoryUrl>https://github.com/JeevanJames/PolicyEvaluation.git</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <PackageTags>PolicyEvaluation</PackageTags>
@@ -36,10 +36,10 @@
     </ItemGroup>
 
     <ItemGroup Label="Analyzer Package References">
-        <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="7.0.4" PrivateAssets="all"/>
-        <PackageReference Include="Roslynator.Analyzers" Version="4.5.0" PrivateAssets="all"/>
-        <PackageReference Include="SonarAnalyzer.CSharp" Version="9.12.0.78982" PrivateAssets="all"/>
-        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.507" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" PrivateAssets="all"/>
+        <PackageReference Include="Roslynator.Analyzers" Version="4.14.0" PrivateAssets="all"/>
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="10.15.0.120848" PrivateAssets="all"/>
+        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556" PrivateAssets="all"/>
     </ItemGroup>
 
 </Project>
